force-app/main/default/objects/ffr__InquiryTemplateFilter__c/ffr__InquiryTemplateFilter__c.object-meta.xml
<CustomObject>
    <description>Stores the expression that determines what data is retrieved when a template is used in action views.</description>
    <label>Action View Template Filter</label>
    <nameField>
        <displayFormat>ETF-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>