force-app/main/default/objects/ffr__InquiryTemplateFilter__c/fields/ffr__DataViewField__c.field-meta.xml
<CustomField>
    <fullName>ffr__DataViewField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field</label>
    <referenceTo>ffr__DataViewField__c</referenceTo>
    <relationshipLabel>Action View Template Filters</relationshipLabel>
    <relationshipName>InquiryTemplateFilters</relationshipName>
    <type>Lookup</type>
</CustomField>