force-app/main/default/objects/ffr__InquiryTemplateFilter__c/fields/ffr__Operator__c.field-meta.xml
<CustomField>
    <fullName>ffr__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&lt;&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>in range</fullName>
            </value>
            <value>
                <fullName>not in range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>