force-app/main/default/objects/ffr__InquiryTemplateFilter__c/fields/ffr__Prompt__c.field-meta.xml
<CustomField>
    <fullName>ffr__Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prompt</label>
    <type>Checkbox</type>
</CustomField>